Adding bitcoin capability to currency converter

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <select name="currency-selector" id="currency-selector">
             <option value="dolar">Dolar</option>
             <option value="euro">Euro</option>
+            <option value="bitcoin">Bitcoin</option>
             <option value="uf">UF</option>
           </select>
         </div>
